<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#f7f7f7"
    android:longClickable="false">

    <TextView
        android:id="@+id/totalDonationsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="60dp"
        android:text="@string/donationAmount"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/chocolate"
        android:background="@drawable/grey_button"
        style="@style/white_button_text" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/oil"
        android:background="@drawable/grey_button"
        style="@style/white_button_text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/eighth"
        android:background="@drawable/grey_button"
        style="@style/white_button_text" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/quarter"
        android:background="@drawable/grey_button"
        style="@style/white_button_text"
        android:enabled="true" />

</LinearLayout>




